# chimeric

./: SETUP  index.html  pyproject.toml  script.js  styles.css  wssdspy.py
plainserverdashboard/: index.html  servedashboard.py
