[tool.poetry]
name = "websocketsdspy"
version = "0.1.0"
description = ""
authors = ["uprootiny <uprootiny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^12.0"
dspy-ai = "^2.4.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
